[gd_scene load_steps=9 format=3 uid="uid://d3ikl5x5t73e5"]

[ext_resource type="Texture2D" uid="uid://bcokgtfkgab0i" path="res://assets/sprites/map/rooms/room_background.png" id="1_2lhjd"]
[ext_resource type="Script" uid="uid://c64axiapeh5nx" path="res://assets/scripts/dungeon/base_room.gd" id="1_mxg2v"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d21kd"]

[sub_resource type="QuadMesh" id="QuadMesh_kpvfv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j134y"]
size = Vector2(1153, 140)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpiby"]
size = Vector2(161, 645)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tykw"]
size = Vector2(1152, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thc5n"]
size = Vector2(167, 643)

[node name="SpawnRoom" type="Node2D"]
script = ExtResource("1_mxg2v")

[node name="RoomPhisics" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_d21kd")

[node name="MeshInstance2D" type="MeshInstance2D" parent="RoomPhisics"]
position = Vector2(576.25, 323.25)
scale = Vector2(1153.5, 647.5)
mesh = SubResource("QuadMesh_kpvfv")
texture = ExtResource("1_2lhjd")

[node name="NorthWallCollision" type="CollisionShape2D" parent="RoomPhisics"]
position = Vector2(576.5, 72)
shape = SubResource("RectangleShape2D_j134y")

[node name="EastWallCollision" type="CollisionShape2D" parent="RoomPhisics"]
position = Vector2(1072.5, 323.5)
shape = SubResource("RectangleShape2D_dpiby")

[node name="SouthWallCollision" type="CollisionShape2D" parent="RoomPhisics"]
position = Vector2(577, 574)
shape = SubResource("RectangleShape2D_3tykw")

[node name="WestWallCollision" type="CollisionShape2D" parent="RoomPhisics"]
position = Vector2(83.5, 323.5)
shape = SubResource("RectangleShape2D_thc5n")

[node name="DoorMarkers" type="Node2D" parent="."]

[node name="NorthDoor" type="Marker2D" parent="DoorMarkers"]
position = Vector2(576, 117)

[node name="EastDoor" type="Marker2D" parent="DoorMarkers"]
position = Vector2(1017, 315)

[node name="SouthDoor" type="Marker2D" parent="DoorMarkers"]
position = Vector2(576, 528)

[node name="WestDoor" type="Marker2D" parent="DoorMarkers"]
position = Vector2(144, 315)

[node name="EscapePodMarkers" type="Node2D" parent="."]

[node name="EastEscapePod" type="Marker2D" parent="EscapePodMarkers"]
position = Vector2(796.5, 315)

[node name="WestEscapePod" type="Marker2D" parent="EscapePodMarkers"]
position = Vector2(360, 315)
